[package]
name = "sysz"
version = "0.0.1"
edition = "2024"

[dependencies]
rand = "0.9"
image = "0.25"
chrono = "0.4"
anyhow = "1.0"
colored = "3.0"
thiserror = "2.0"
once_cell = "1.21"
shell-words = "1.1"
terminal_size = "0.4"

[dependencies.regex]
version = "1.11"
default-features = false
features = ["std", "unicode-perl"]

[dev-dependencies]
tempfile = "3.20"
