[package]
name = "sysz"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.1"
image = "0.25.6"
chrono = "0.4.41"
colored = "3.0.0"
thiserror = "2"
shell-words = "1.1.0"
terminal_size = "0.4.2"

[dependencies.regex]
version = "1.11.1"
default-features = false
features = ["std", "unicode-perl"]

[dev-dependencies]
tempfile = "3.20.0"
